--- a/src/pages/home/HomeStyle.css
+++ b/src/pages/home/HomeStyle.css
@@ -1,3 +1,7 @@
 /* .form-surround{
     display: flex;
 } */
+
+.backdrop{
+    background-image: url('https://i.ibb.co/XrGPpZz5/aotm-slider.gif');
+}
