--- a/src/index.css
+++ b/src/index.css
@@ -1,153 +1,147 @@
-body, html{
-  font-family: Philosopher,sans-serif;
-  overflow-x: hidden!important;
-box-sizing: border-box;
+body,
+html {
+  font-family: Philosopher, sans-serif;
+  overflow-x: hidden !important;
+  box-sizing: border-box;
 }
-.warning, .text-warning{
-  color: #ff7d02!important;
+.warning,
+.text-warning {
+  color: #ff7d02 !important;
 }
-a{
+a {
   text-decoration: none;
 }
 
-.form-search .form-surround{
+.form-search .form-surround {
   display: flex;
   border: 2px solid #ff7d02;
   border-radius: 20px;
   width: 100%;
   margin: auto;
 }
-.form-search :-ms-input-placeholder{
+.form-search :-ms-input-placeholder {
   border: 0;
 }
-.form-search input{
-  border: 0!important;
-background-color: transparent!important;
--webkit-box-shadow: none!important;
--moz-box-shadow: none!important;
-color: white;
+.form-search input {
+  border: 0 !important;
+  background-color: transparent !important;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  color: white;
 }
-.form-search input::placeholder{
-
-  color: #ff7d02!important; 
+.form-search input::placeholder {
+  color: #ff7d02 !important;
   /* background-color: red; */
 }
-.btn-warning{
+.btn-warning {
   background-color: #ff7d02;
 }
-input{
+input {
   border-radius: 20px;
   border: 2px solid #ff7d02;
-  
 }
 /* .form-search input::target-text{
   border: 0;
 } */
-.form-search input:focus{
-  border: 0!important;
+.form-search input:focus {
+  border: 0 !important;
 }
 
-::-webkit-scrollbar{
-  width:8px;
-  border-radius:50%!important;
+::-webkit-scrollbar {
+  width: 8px;
+  border-radius: 50% !important;
 }
-::-webkit-scrollbar-track{
-  border:5px solid #7da0b3;
+::-webkit-scrollbar-track {
+  border: 5px solid #7da0b3;
 }
-::-webkit-scrollbar-thumb{
-  background:#336c8b;
-  border-radius:10%!important;
+::-webkit-scrollbar-thumb {
+  background: #336c8b;
+  border-radius: 10% !important;
 }
-a:hover{
+a:hover {
   color: #ff7d02;
 }
-.navigation:hover{
-  color: #ff7d02!important;
+.navigation:hover {
+  color: #ff7d02 !important;
 }
 
-.cart svg:hover, .svg-surround svg:hover{
+.cart svg:hover,
+.svg-surround svg:hover {
   transform: scale(1.1);
   transform: rotate(360deg);
   transition: ease 1000ms;
-  fill: #ff7d02!important;
+  fill: #ff7d02 !important;
 }
-.cart svg, .cart path .svg-surround svg, .svg-surround path{
-  fill: #fff!important;
-
+.cart svg,
+.cart path .svg-surround svg,
+.svg-surround path {
+  fill: #fff !important;
 }
 
- .span-svg{
+.span-svg {
   margin-left: -5px;
   background-color: white;
   width: 30px;
   height: 30px;
-  border-radius: 50%; 
+  border-radius: 50%;
   /* font-size: 10px; */
 }
-.form-search .form-control{
+.form-search .form-control {
   /* border-left: 3px solid #ff9b00!important; */
   border-top: 0;
   border-left: 0;
   border-right: 0;
 }
-
 
 /* Login page  */
 
 .login-img {
-  background-image: url('./assets/login.jpg');
+  background-image: url("./assets/login.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-
-  
- 
 }
-.login-img form{
+.login-img form {
   margin: auto;
-  width: 300px; 
-  background-color:rgb(0 0 0 / 29%);
+  width: 300px;
+  background-color: rgb(0 0 0 / 29%);
   box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.13);
-
 }
-.login-img form{
+.login-img form {
   /* border-left: 3px solid #ff9b00!important; */
   border-top: 0;
   border-left: 0;
   border-right: 0;
-  border: 0!important;
+  border: 0 !important;
 }
-.login-img form input{
-  border: 0!important ;
-  border-bottom: 2px solid #ff7d02!important;
+.login-img form input {
+  border: 0 !important ;
+  border-bottom: 2px solid #ff7d02 !important;
   border-radius: 0;
-  background-color: transparent!important;
-  -webkit-box-shadow: none!important;
-  -moz-box-shadow: none!important;
+  background-color: transparent !important;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
   color: white;
-  
 }
-.login-img ::placeholder{
+.login-img ::placeholder {
   color: rgb(236, 231, 231);
   text-align: center;
 }
 
-
 /* lOADER */
 
-.wrapper{
+.wrapper {
   position: fixed;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 9;
 }
 
-.loader{
+.loader {
   position: fixed;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   z-index: 999;
-
 }
 /* lOADER ENDS */
